--- a/index.html
+++ b/index.html
@@ -13,6 +13,30 @@
     <title>Calculadora</title>
   </head>
   <body>
+    <div class="grid-container">
+      <div class="output">
+        <div class="previous-operand">1234 +</div>
+        <div class="current-operand">1234</div>
+      </div>
+      <button class="span-two">AC</button>
+      <button>DEL</button>
+      <button class="operator">÷</button>
+      <button>1</button>
+      <button>2</button>
+      <button>3</button>
+      <button class="operator">*</button>
+      <button>4</button>
+      <button>5</button>
+      <button>6</button>
+      <button class="operator">+</button>
+      <button>7</button>
+      <button>8</button>
+      <button>9</button>
+      <button class="operator">-</button>
+      <button class="span-two">.</button>
+      <button>0</button>
+      <button class="operator">=</button>
+    </div>
     <script src="scripts.js"></script>
   </body>
 </html>
